--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "534663ef",
+   "id": "7c67963c",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37150b45",
+   "id": "f92049d0",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e9768b3",
+   "id": "1f01e1d7",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99fb276b",
+   "id": "e70c22d2",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ff0527",
+   "id": "01a00a9b",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e282b9f",
+   "id": "c8956167",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4822f590",
+   "id": "723c1986",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:01.220712Z",
-     "iopub.status.busy": "2025-01-22T11:07:01.220524Z",
-     "iopub.status.idle": "2025-01-22T11:07:05.597467Z",
-     "shell.execute_reply": "2025-01-22T11:07:05.596922Z"
+     "iopub.execute_input": "2025-01-22T11:17:09.929577Z",
+     "iopub.status.busy": "2025-01-22T11:17:09.929397Z",
+     "iopub.status.idle": "2025-01-22T11:17:14.151766Z",
+     "shell.execute_reply": "2025-01-22T11:17:14.151171Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83edb086",
+   "id": "95fee9a6",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576efbf4",
+   "id": "0fabff06",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9d77403",
+   "id": "f3bb9638",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6877d197",
+   "id": "56d3dd7a",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bedd6f43",
+   "id": "e8b0328a",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c662e7e",
+   "id": "fc6c7ef1",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "848a4837",
+   "id": "bb303195",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8999e3c5",
+   "id": "0aaf30a7",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6e3185a3",
+   "id": "3f96ac20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:05.599940Z",
-     "iopub.status.busy": "2025-01-22T11:07:05.599478Z",
-     "iopub.status.idle": "2025-01-22T11:07:07.560745Z",
-     "shell.execute_reply": "2025-01-22T11:07:07.560086Z"
+     "iopub.execute_input": "2025-01-22T11:17:14.154172Z",
+     "iopub.status.busy": "2025-01-22T11:17:14.153595Z",
+     "iopub.status.idle": "2025-01-22T11:17:16.066176Z",
+     "shell.execute_reply": "2025-01-22T11:17:16.065629Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e6f9032",
+   "id": "925469a4",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb3a1d59",
+   "id": "59b712d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:07.562720Z",
-     "iopub.status.busy": "2025-01-22T11:07:07.562519Z",
-     "iopub.status.idle": "2025-01-22T11:07:07.566694Z",
-     "shell.execute_reply": "2025-01-22T11:07:07.566104Z"
+     "iopub.execute_input": "2025-01-22T11:17:16.068159Z",
+     "iopub.status.busy": "2025-01-22T11:17:16.067769Z",
+     "iopub.status.idle": "2025-01-22T11:17:16.070959Z",
+     "shell.execute_reply": "2025-01-22T11:17:16.070408Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5217b6c2",
+   "id": "c11f27ff",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7f9e7d9",
+   "id": "a6f9f82b",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfca8c4a",
+   "id": "f8683187",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0efb27f2",
+   "id": "09a02d91",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "62e65c60",
+   "id": "4399dc31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:07.568686Z",
-     "iopub.status.busy": "2025-01-22T11:07:07.568320Z",
-     "iopub.status.idle": "2025-01-22T11:07:07.619861Z",
-     "shell.execute_reply": "2025-01-22T11:07:07.619212Z"
+     "iopub.execute_input": "2025-01-22T11:17:16.072734Z",
+     "iopub.status.busy": "2025-01-22T11:17:16.072554Z",
+     "iopub.status.idle": "2025-01-22T11:17:16.117144Z",
+     "shell.execute_reply": "2025-01-22T11:17:16.116594Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1322c02b",
+   "id": "94051c2a",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c3d9f95a",
+   "id": "9b3fbc0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:07.622067Z",
-     "iopub.status.busy": "2025-01-22T11:07:07.621691Z",
-     "iopub.status.idle": "2025-01-22T11:07:07.695874Z",
-     "shell.execute_reply": "2025-01-22T11:07:07.695275Z"
+     "iopub.execute_input": "2025-01-22T11:17:16.119137Z",
+     "iopub.status.busy": "2025-01-22T11:17:16.118686Z",
+     "iopub.status.idle": "2025-01-22T11:17:16.186642Z",
+     "shell.execute_reply": "2025-01-22T11:17:16.186118Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4eb61c6",
+   "id": "d771dd1b",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fdd2f7b",
+   "id": "e8c9502e",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c8a373f2",
+   "id": "80ed1e46",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:07.698051Z",
-     "iopub.status.busy": "2025-01-22T11:07:07.697667Z",
-     "iopub.status.idle": "2025-01-22T11:07:07.727968Z",
-     "shell.execute_reply": "2025-01-22T11:07:07.727375Z"
+     "iopub.execute_input": "2025-01-22T11:17:16.188489Z",
+     "iopub.status.busy": "2025-01-22T11:17:16.188299Z",
+     "iopub.status.idle": "2025-01-22T11:17:16.218243Z",
+     "shell.execute_reply": "2025-01-22T11:17:16.217668Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02325061",
+   "id": "433e19dd",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cefb884",
+   "id": "1d5dfe3b",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d59a74a",
+   "id": "15f6246e",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a018e140",
+   "id": "6f30a876",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41deefb2",
+   "id": "61883827",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cc83697a",
+   "id": "1c78ddc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:07.730213Z",
-     "iopub.status.busy": "2025-01-22T11:07:07.729851Z",
-     "iopub.status.idle": "2025-01-22T11:07:07.733961Z",
-     "shell.execute_reply": "2025-01-22T11:07:07.733325Z"
+     "iopub.execute_input": "2025-01-22T11:17:16.220404Z",
+     "iopub.status.busy": "2025-01-22T11:17:16.219874Z",
+     "iopub.status.idle": "2025-01-22T11:17:16.223990Z",
+     "shell.execute_reply": "2025-01-22T11:17:16.223374Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5fa63a",
+   "id": "d8010e05",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d2428021",
+   "id": "9ca77629",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:07.735970Z",
-     "iopub.status.busy": "2025-01-22T11:07:07.735536Z",
-     "iopub.status.idle": "2025-01-22T11:07:07.738840Z",
-     "shell.execute_reply": "2025-01-22T11:07:07.738158Z"
+     "iopub.execute_input": "2025-01-22T11:17:16.225824Z",
+     "iopub.status.busy": "2025-01-22T11:17:16.225483Z",
+     "iopub.status.idle": "2025-01-22T11:17:16.228533Z",
+     "shell.execute_reply": "2025-01-22T11:17:16.228086Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950f1333",
+   "id": "82e93861",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5ec18b21",
+   "id": "c113b958",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:07.740567Z",
-     "iopub.status.busy": "2025-01-22T11:07:07.740387Z",
-     "iopub.status.idle": "2025-01-22T11:07:10.348111Z",
-     "shell.execute_reply": "2025-01-22T11:07:10.347583Z"
+     "iopub.execute_input": "2025-01-22T11:17:16.230212Z",
+     "iopub.status.busy": "2025-01-22T11:17:16.229912Z",
+     "iopub.status.idle": "2025-01-22T11:17:18.782146Z",
+     "shell.execute_reply": "2025-01-22T11:17:18.781547Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "990f9c6c",
+   "id": "5fca2d07",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61da0619",
+   "id": "80c10267",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe3e66dc",
+   "id": "6e4beabd",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e56d082",
+   "id": "1bd5783c",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2f5b802a",
+   "id": "b0db5203",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:10.350311Z",
-     "iopub.status.busy": "2025-01-22T11:07:10.349987Z",
-     "iopub.status.idle": "2025-01-22T11:07:10.353834Z",
-     "shell.execute_reply": "2025-01-22T11:07:10.353177Z"
+     "iopub.execute_input": "2025-01-22T11:17:18.784168Z",
+     "iopub.status.busy": "2025-01-22T11:17:18.783796Z",
+     "iopub.status.idle": "2025-01-22T11:17:18.787366Z",
+     "shell.execute_reply": "2025-01-22T11:17:18.786773Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f02c42619e0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ffa849bf380>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fca8b171",
+   "id": "4f097f11",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd492c5f",
+   "id": "771a0fb3",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "306475fd",
+   "id": "a10909cb",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13dca90f",
+   "id": "58087d8f",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a26ccf6e",
+   "id": "ab6c63e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:10.355680Z",
-     "iopub.status.busy": "2025-01-22T11:07:10.355495Z",
-     "iopub.status.idle": "2025-01-22T11:07:10.358710Z",
-     "shell.execute_reply": "2025-01-22T11:07:10.358075Z"
+     "iopub.execute_input": "2025-01-22T11:17:18.789423Z",
+     "iopub.status.busy": "2025-01-22T11:17:18.789015Z",
+     "iopub.status.idle": "2025-01-22T11:17:18.792017Z",
+     "shell.execute_reply": "2025-01-22T11:17:18.791441Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6e44d756",
+   "id": "167c687c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:07:10.360493Z",
-     "iopub.status.busy": "2025-01-22T11:07:10.360120Z",
-     "iopub.status.idle": "2025-01-22T11:07:11.436732Z",
-     "shell.execute_reply": "2025-01-22T11:07:11.436186Z"
+     "iopub.execute_input": "2025-01-22T11:17:18.793625Z",
+     "iopub.status.busy": "2025-01-22T11:17:18.793449Z",
+     "iopub.status.idle": "2025-01-22T11:17:19.857497Z",
+     "shell.execute_reply": "2025-01-22T11:17:19.856976Z"
     }
    },
    "outputs": [
