deploy: 12733106390241f076516f48276f6ca8c62a2dc2

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7c67963c",
+   "id": "12bfbfb9",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f92049d0",
+   "id": "ac2aa972",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f01e1d7",
+   "id": "13c77950",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e70c22d2",
+   "id": "a639250c",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01a00a9b",
+   "id": "c2ce7e2a",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8956167",
+   "id": "600f146b",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "723c1986",
+   "id": "5b75cfc0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:09.929577Z",
-     "iopub.status.busy": "2025-01-22T11:17:09.929397Z",
-     "iopub.status.idle": "2025-01-22T11:17:14.151766Z",
-     "shell.execute_reply": "2025-01-22T11:17:14.151171Z"
+     "iopub.execute_input": "2025-01-22T11:42:23.277545Z",
+     "iopub.status.busy": "2025-01-22T11:42:23.277338Z",
+     "iopub.status.idle": "2025-01-22T11:42:27.707345Z",
+     "shell.execute_reply": "2025-01-22T11:42:27.706675Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95fee9a6",
+   "id": "955f0b59",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fabff06",
+   "id": "981877a5",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3bb9638",
+   "id": "8c3f8a9e",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56d3dd7a",
+   "id": "11f5c913",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8b0328a",
+   "id": "f8041294",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc6c7ef1",
+   "id": "700cf3f4",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb303195",
+   "id": "484055cb",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aaf30a7",
+   "id": "8c150b94",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3f96ac20",
+   "id": "868d3b0f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:14.154172Z",
-     "iopub.status.busy": "2025-01-22T11:17:14.153595Z",
-     "iopub.status.idle": "2025-01-22T11:17:16.066176Z",
-     "shell.execute_reply": "2025-01-22T11:17:16.065629Z"
+     "iopub.execute_input": "2025-01-22T11:42:27.709851Z",
+     "iopub.status.busy": "2025-01-22T11:42:27.709298Z",
+     "iopub.status.idle": "2025-01-22T11:42:29.736219Z",
+     "shell.execute_reply": "2025-01-22T11:42:29.735687Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "925469a4",
+   "id": "f8602dde",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "59b712d7",
+   "id": "1fdac76a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:16.068159Z",
-     "iopub.status.busy": "2025-01-22T11:17:16.067769Z",
-     "iopub.status.idle": "2025-01-22T11:17:16.070959Z",
-     "shell.execute_reply": "2025-01-22T11:17:16.070408Z"
+     "iopub.execute_input": "2025-01-22T11:42:29.738344Z",
+     "iopub.status.busy": "2025-01-22T11:42:29.737880Z",
+     "iopub.status.idle": "2025-01-22T11:42:29.741492Z",
+     "shell.execute_reply": "2025-01-22T11:42:29.740866Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c11f27ff",
+   "id": "1655551a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6f9f82b",
+   "id": "a030fa59",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8683187",
+   "id": "7f4eb210",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a02d91",
+   "id": "3fef904f",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4399dc31",
+   "id": "1e838137",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:16.072734Z",
-     "iopub.status.busy": "2025-01-22T11:17:16.072554Z",
-     "iopub.status.idle": "2025-01-22T11:17:16.117144Z",
-     "shell.execute_reply": "2025-01-22T11:17:16.116594Z"
+     "iopub.execute_input": "2025-01-22T11:42:29.743375Z",
+     "iopub.status.busy": "2025-01-22T11:42:29.743201Z",
+     "iopub.status.idle": "2025-01-22T11:42:29.789090Z",
+     "shell.execute_reply": "2025-01-22T11:42:29.788418Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94051c2a",
+   "id": "e105b0de",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9b3fbc0c",
+   "id": "bc159fba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:16.119137Z",
-     "iopub.status.busy": "2025-01-22T11:17:16.118686Z",
-     "iopub.status.idle": "2025-01-22T11:17:16.186642Z",
-     "shell.execute_reply": "2025-01-22T11:17:16.186118Z"
+     "iopub.execute_input": "2025-01-22T11:42:29.791177Z",
+     "iopub.status.busy": "2025-01-22T11:42:29.790724Z",
+     "iopub.status.idle": "2025-01-22T11:42:29.862394Z",
+     "shell.execute_reply": "2025-01-22T11:42:29.861878Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d771dd1b",
+   "id": "2e3793ee",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c9502e",
+   "id": "0bf03c11",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "80ed1e46",
+   "id": "4b492fdd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:16.188489Z",
-     "iopub.status.busy": "2025-01-22T11:17:16.188299Z",
-     "iopub.status.idle": "2025-01-22T11:17:16.218243Z",
-     "shell.execute_reply": "2025-01-22T11:17:16.217668Z"
+     "iopub.execute_input": "2025-01-22T11:42:29.864334Z",
+     "iopub.status.busy": "2025-01-22T11:42:29.863988Z",
+     "iopub.status.idle": "2025-01-22T11:42:29.896609Z",
+     "shell.execute_reply": "2025-01-22T11:42:29.895991Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "433e19dd",
+   "id": "208f618d",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d5dfe3b",
+   "id": "a34b1e1f",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15f6246e",
+   "id": "6b78e55a",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f30a876",
+   "id": "5cd6c353",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61883827",
+   "id": "d8c4325d",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1c78ddc1",
+   "id": "205f275a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:16.220404Z",
-     "iopub.status.busy": "2025-01-22T11:17:16.219874Z",
-     "iopub.status.idle": "2025-01-22T11:17:16.223990Z",
-     "shell.execute_reply": "2025-01-22T11:17:16.223374Z"
+     "iopub.execute_input": "2025-01-22T11:42:29.898810Z",
+     "iopub.status.busy": "2025-01-22T11:42:29.898377Z",
+     "iopub.status.idle": "2025-01-22T11:42:29.902851Z",
+     "shell.execute_reply": "2025-01-22T11:42:29.902171Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8010e05",
+   "id": "5db8a305",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9ca77629",
+   "id": "70e64889",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:16.225824Z",
-     "iopub.status.busy": "2025-01-22T11:17:16.225483Z",
-     "iopub.status.idle": "2025-01-22T11:17:16.228533Z",
-     "shell.execute_reply": "2025-01-22T11:17:16.228086Z"
+     "iopub.execute_input": "2025-01-22T11:42:29.904637Z",
+     "iopub.status.busy": "2025-01-22T11:42:29.904324Z",
+     "iopub.status.idle": "2025-01-22T11:42:29.907359Z",
+     "shell.execute_reply": "2025-01-22T11:42:29.906799Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82e93861",
+   "id": "42b45da7",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c113b958",
+   "id": "4143eafe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:16.230212Z",
-     "iopub.status.busy": "2025-01-22T11:17:16.229912Z",
-     "iopub.status.idle": "2025-01-22T11:17:18.782146Z",
-     "shell.execute_reply": "2025-01-22T11:17:18.781547Z"
+     "iopub.execute_input": "2025-01-22T11:42:29.909087Z",
+     "iopub.status.busy": "2025-01-22T11:42:29.908903Z",
+     "iopub.status.idle": "2025-01-22T11:42:32.494186Z",
+     "shell.execute_reply": "2025-01-22T11:42:32.493547Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fca2d07",
+   "id": "dfae086b",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80c10267",
+   "id": "fab27c21",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4beabd",
+   "id": "37c5efcd",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bd5783c",
+   "id": "583c65e9",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b0db5203",
+   "id": "f70da1b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:18.784168Z",
-     "iopub.status.busy": "2025-01-22T11:17:18.783796Z",
-     "iopub.status.idle": "2025-01-22T11:17:18.787366Z",
-     "shell.execute_reply": "2025-01-22T11:17:18.786773Z"
+     "iopub.execute_input": "2025-01-22T11:42:32.496297Z",
+     "iopub.status.busy": "2025-01-22T11:42:32.495916Z",
+     "iopub.status.idle": "2025-01-22T11:42:32.499968Z",
+     "shell.execute_reply": "2025-01-22T11:42:32.499235Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ffa849bf380>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4f8a0ab380>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f097f11",
+   "id": "91b1ebe6",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "771a0fb3",
+   "id": "428700d6",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a10909cb",
+   "id": "bb1065a8",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58087d8f",
+   "id": "fc1f8a99",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ab6c63e0",
+   "id": "4c143dfc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:18.789423Z",
-     "iopub.status.busy": "2025-01-22T11:17:18.789015Z",
-     "iopub.status.idle": "2025-01-22T11:17:18.792017Z",
-     "shell.execute_reply": "2025-01-22T11:17:18.791441Z"
+     "iopub.execute_input": "2025-01-22T11:42:32.501877Z",
+     "iopub.status.busy": "2025-01-22T11:42:32.501567Z",
+     "iopub.status.idle": "2025-01-22T11:42:32.504292Z",
+     "shell.execute_reply": "2025-01-22T11:42:32.503805Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "167c687c",
+   "id": "a7f6205a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:17:18.793625Z",
-     "iopub.status.busy": "2025-01-22T11:17:18.793449Z",
-     "iopub.status.idle": "2025-01-22T11:17:19.857497Z",
-     "shell.execute_reply": "2025-01-22T11:17:19.856976Z"
+     "iopub.execute_input": "2025-01-22T11:42:32.506464Z",
+     "iopub.status.busy": "2025-01-22T11:42:32.505839Z",
+     "iopub.status.idle": "2025-01-22T11:42:33.578040Z",
+     "shell.execute_reply": "2025-01-22T11:42:33.577531Z"
     }
    },
    "outputs": [
